# working_title.c

./: .clang-format  .clangd  .gitignore  .ignore  CMakeLists.txt  README.md  ascii_convert.py  build.sh  compile.sh  debug.sh  flake.nix  makefile  run.sh  shell.nix
src/demos/: cube.c
src/linalg/: line.c  line.h  mat.c  mat.h  plane.c  plane.h  transform.c  transform.h  triangle.h  vec.c  vec.h
src/rendering/: pixel.c  pixel.h  render.c  render.h  viewplane.c  viewplane.h
src/rendering/primitives/: cube.c  cube.h  object.c  object.h  rectangle.c  rectangle.h
src/utils/: buf.h  macros.h  term.c  term.h
